# shopify-crawler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  TechnicalAssesment.xlsx  conf.py  example.ipynb  make.bat
src/: __init__.py  main.py  run_app_events.py  run_app_reviews.py  run_applications.py  run_homepage_category.py  run_transactions.py
src/crawlers/: __init__.py  app_info.py  category_finding_products.py  category_marketing_and_conversion.py  category_orders_and_shipping.py  category_selling_products.py  category_store_design.py  category_store_management.py  crawl_info_searching.py  decorators.py  home_page.py  main.py  searching_result.py  utils.py
src/crawlers/configs/: link_config.json
src/database/: mongodb.py  motor_multithread.py  multiprocess_retry_timeout.py
src/decorators/: time_decorator.py
src/networks/: clone_proxies.py  ip_rotation.py  proxy_management.py
src/networks/assets/: list_proxy.json
src/shopify_api/: __init__.py  get_data_from_shopify.py
src/shopify_crawler/: __init__.py
src/utilities/: utils.py
tests/: test_shopify_crawler.py
