[tool.poetry]
name = "shopify_crawler"
version = "0.1.0"
description = "Shopify Crawler"
authors = ["Binh Nguyen Quoc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
